src/test/ui/derived-errors/issue-31997-1.stderr
error[E0433]: failed to resolve. Use of undeclared type or module `HashMap`
  --> $DIR/issue-31997-1.rs:30:19
   |
30 |     let mut map = HashMap::new();
   |                   ^^^^^^^ Use of undeclared type or module `HashMap`

error: aborting due to previous error

